adds class to control height of arrow depending on if the item in photoslideshow is an image or video (so controls can still be accessed for video); cleans up unused css; some tidying

--- a/src/components/photo-slideshow/photo-slideshow.css
+++ b/src/components/photo-slideshow/photo-slideshow.css
@@ -1,6 +1,7 @@
 .photo-slideshow-container {
   position: relative;
   overflow: hidden;
+  height: fit-content;
 }
 
 
@@ -22,8 +23,3 @@
   /* background-color: white;
   opacity: 0.4; */
 }
-
-/* .photo-slideshow-container img {
-  cursor: pointer;
-}
- */
