--- a/src/components/arrow/arrow.css
+++ b/src/components/arrow/arrow.css
@@ -51,7 +51,15 @@
   cursor: pointer;
   opacity: 0;
   transition: opacity .3s;
+  z-index: 1;
+}
+
+.nav-arrow-container-height-full {
   height: 100%;
+}
+
+.nav-arrow-container-height-small {
+  height: 60%;
 }
 
 .left.nav-arrow:hover,
