--- a/src/components/arrow/arrow.css
+++ b/src/components/arrow/arrow.css
@@ -58,6 +58,13 @@
   z-index: 1;
 }
 
+@media (max-width: 480px) {
+  .left.nav-arrow,
+  .right.nav-arrow{
+    opacity: 1;
+  }
+}
+
 .nav-arrow-container-height-full {
   height: 100%;
 }
@@ -74,28 +81,28 @@
 /* For left-pointing arrow */
 
 .left.nav-arrow-left-tip {
-  transform: translate(3px, 8px) rotate(-45deg);
-  left: 20px;
+  transform: translate(0, 8px) rotate(-45deg);
+  left: 45%;
   bottom: 50%;
 }
 
 .left.nav-arrow-right-tip {
-  transform: translate(3px, 2px) rotate(45deg);
-  left: 20px;
+  transform: translate(0, 2px) rotate(45deg);
+  left: 45%;
   bottom: 50%;
 }
 
 /* For right-pointing arrow */
 
 .right.nav-arrow-left-tip {
-  transform: translate(-3px, 2px) rotate(-45deg);
-  right: 20px;
+  transform: translate(0, 2px) rotate(-45deg);
+  right: 45%;
   bottom: 50%;
 }
 
 .right.nav-arrow-right-tip {
-  transform: translate(-3px, 8px) rotate(45deg);
-  right: 20px;
+  transform: translate(0, 8px) rotate(45deg);
+  right: 45%;
   bottom: 50%;
 }
 
@@ -140,16 +147,16 @@
   position: absolute;
   top: 50%;
   transform: translate(0,-50%);
-  background-color: blue;
-  height: 2em;
-  width: 2em;
+  background-color: #47464d;
+  height: 25px;
+  width: 25px;
   border-radius: 50%;
 }
 
 .arrow-circle-right {
-  right: 5px;
+  right: 10px;
 }
 
 .arrow-circle-left {
-  left: 5px;
+  left: 10px;
 }
