--- a/src/components/arrow/arrow.css
+++ b/src/components/arrow/arrow.css
@@ -7,7 +7,7 @@
 
 .down.nav-arrow-left-tip, 
 .down.nav-arrow-right-tip {
-    position: absolute;
+  position: absolute;
   z-index: 2;
   width: 1px;
   height: 15px;
@@ -82,28 +82,28 @@
 
 .left.nav-arrow-left-tip {
   transform: translate(0, 8px) rotate(-45deg);
-  left: 45%;
-  bottom: 50%;
+  left: 11px;
+  bottom: 13px;
 }
 
 .left.nav-arrow-right-tip {
   transform: translate(0, 2px) rotate(45deg);
-  left: 45%;
-  bottom: 50%;
+  left: 11px;
+  bottom: 13px;
 }
 
 /* For right-pointing arrow */
 
 .right.nav-arrow-left-tip {
   transform: translate(0, 2px) rotate(-45deg);
-  right: 45%;
-  bottom: 50%;
+  right: 11px;
+  bottom: 13px;
 }
 
 .right.nav-arrow-right-tip {
   transform: translate(0, 8px) rotate(45deg);
-  right: 45%;
-  bottom: 50%;
+  right: 11px;
+  bottom: 13px;
 }
 
 /* For arrow color */
