--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -16,6 +16,57 @@ canvas {
   /* z-index: 0; */
 }
 
+.external-links {
+  background-color: transparent;
+  border: none;
+  position: relative;
+  z-index: 2;
+  cursor: pointer;
+  margin-right: 0.2em;
+}
+
+/* External links: Styling intended to match localization.css */
+
+/* .localization-button {
+  background-color: transparent;
+  border: none;
+  position: relative;
+  z-index: 2;
+  cursor: pointer;
+  margin-left: 0.2em;
+} */
+
+a:hover {
+  color: grey;
+}
+
+@media (max-width: 480px) {
+  .external-links > svg {
+    font-size: 0.8em;
+    padding-left: 3px;
+    padding-right: 3px;
+  }
+}
+
+@media (min-width: 1441px) {
+  .external-links > svg {  
+    /* Same font size as H3 */
+    font-size: 1.17em; 
+    margin-top: 0.2em;
+    margin-right: 0.8em;
+  } 
+
+}
+
+@media (min-width: 2160px) {
+  .external-links > svg {
+    font-size: 1.755em;
+  }
+  
+}
+
+/* External links */
+
 .sphereHtml {
   background-color: transparent;
   cursor: crosshair;
