adjusts height for arrow circle on photo slideshow so it's centered on the smaller panels for video

--- a/src/components/arrow/arrow.css
+++ b/src/components/arrow/arrow.css
@@ -153,6 +153,10 @@
   border-radius: 50%;
 }
 
+.nav-arrow-container-height-small > .arrow-circle {
+  top: 83%
+}
+
 .arrow-circle-right {
   right: 10px;
 }
