creates CustomMessage component; installs react-spring; refactors Localization to make it take up 50% of space on page only

--- a/src/components/localization/localization.css
+++ b/src/components/localization/localization.css
@@ -1,3 +1,8 @@
+.localization-container {
+  width: 50%;
+  display: inline-block;
+}
+
 .localization-button {
   background-color: transparent;
   color: black;
