--- a/src/components/custom-message/custom-message.css
+++ b/src/components/custom-message/custom-message.css
@@ -6,5 +6,34 @@
 }
 
 .custom-message {
-    font-size: 0.8em;
+    /* font-size: 0.8em; */
+    margin-right: 0.2em;
+    padding: 1px 6px;
+}
+
+
+@media (max-width: 480px) {
+    .custom-message {
+        font-size: 0.8em;
+        padding-left: 3px;
+        padding-right: 3px;
+    }
+}
+
+@media (min-width: 1441px) {
+    .custom-message {
+        /* Same font size as H3 */
+        font-size: 1.17em;
+        margin-top: 0.2em;
+        margin-right: 0.8em;
+    }
+
+}
+
+@media (min-width: 2160px) {
+
+    .custom-message {
+        font-size: 1.755em;
+    }
+
 }
