creates useIntersectionLoader hook; implements lazy loading for Work section; changes CSS to position the work section reference off the page on first load

--- a/src/components/work/work.css
+++ b/src/components/work/work.css
@@ -1,6 +1,6 @@
 .company-logo-display-container {
   display: flex;
-  margin: 5em;
+  margin-bottom: 5em;
   margin-left: 10em;
   margin-right: 10em;
   flex-wrap: wrap;
