--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Karla:wght@200;400;500;700&display=swap');
+
 body { 
 	margin: 0 auto; 
   margin-top: 0.5em;
